--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type": "module",
     "url": "git+https://github.com/Julia-Tisa/frontend-project-lvl1.git"
   },
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  },
   "author": "Julia",
   "license": "ISC",
   "bugs": {
