--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "repository": {
-    "type": "module",
     "url": "git+https://github.com/Julia-Tisa/frontend-project-lvl1.git"
   },
   "bin": {
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/Julia-Tisa/frontend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/Julia-Tisa/frontend-project-lvl1#readme"
+  "homepage": "https://github.com/Julia-Tisa/frontend-project-lvl1#readme",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
