--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -6,4 +6,7 @@ extends:
 parserOptions:
   ecmaVersion: 11
   sourceType: module
-rules: {}
+rules: {
+  "no-console": "off",
+  "import/extensions": "off"
+}
