--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "url": "git+https://github.com/Julia-Tisa/frontend-project-lvl1.git"
   },
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
   },
   "author": "Julia",
   "license": "ISC",
